[package]
name = "xdbot2_cave_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
base64 = "0.21.7"
dotenv = "0.15.0"
env_logger = "0.10.1"
log = "0.4.20"
rand = "0.8.5"
regex = "1.10.2"
reqwest = "0.11.23"
serde = {version = "1.0.195", features = ["derive"]}
serde_json = "1.0.111"
