[package]
name = "xdbot2_cave_api"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
base64 = "0.22.0"
dotenv = "0.15.0"
env_logger = "0.11.1"
log = "0.4.20"
rand = "0.8.5"
regex = "1.10.3"
reqwest = "0.12.1"
serde = {version = "1.0.196", features = ["derive"]}
serde_json = "1.0.112"
tokio = { version = "1.35.1", features = ["fs"] }
